# dynamicR53

./: .gitignore  README.md  pyproject.toml  set_version.py
src/dynr53/: __init__.py  app.py  config.py
tests/: test_app.py
